# smartf411

./: README.md
smartwatchf411/: .mxproject  smartwatchf411.ioc
smartwatchf411/Core/Inc/: FreeRTOSConfig.h  i2c.h  main.h  rtc.h  stm32f4xx_it.h
smartwatchf411/Core/Src/: adc.c  freertos.c  gpio.c  i2c.c  main.c  rtc.c  spi.c  stm32f4xx_it.c  tim.c  usart.c
smartwatchf411/Drivers/Middlewares/GUI_APP/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h
smartwatchf411/Drivers/Middlewares/GUI_APP/fonts/: ui_font_chinafont16.c  ui_font_chinafont20.c  ui_font_chinafont32.c  ui_font_font16.c  ui_font_fontclock24.c  ui_font_fontclock48.c
smartwatchf411/Drivers/Middlewares/GUI_APP/images/: ui_img_1219711373.c  ui_img_1905141978.c  ui_img_1907056666.c  ui_img_2091611716.c  ui_img_21505875.c  ui_img_70400119.c  ui_img_723305328.c  ui_img_840545791.c
smartwatchf411/Drivers/Middlewares/GUI_APP/screens/: ui_Screen1.c  ui_Screen1.h  ui_Screen2.c  ui_Screen2.h
smartwatchf411/MDK-ARM/: smartwatchf411.uvguix.zlb  smartwatchf411.uvoptx  smartwatchf411.uvprojx  startup_stm32f411xe.lst  startup_stm32f411xe.s
smartwatchf411/MDK-ARM/smartwatchf411/: adc.crf  algorithm.crf  backlight.crf  blood.crf  cmsis_os2.crf  croutine.crf  data.crf  dma.crf  event_groups.crf  font8x16.crf  freertos.crf  gifdec.crf  gpio.crf  gui.crf  heap_4.crf  i2c.crf  img_benchmark_cogwheel_alpha16.crf  img_benchmark_cogwheel_argb.crf  img_benchmark_cogwheel_chroma_keyed.crf  img_benchmark_cogwheel_indexed16.crf  img_benchmark_cogwheel_rgb.crf  img_benchmark_cogwheel_rgb565a8.crf  (+322 more)
(+44 files in other folders)
